# simaris

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  MIGRATION.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.limbo/: tasks.json
.limbo/context/carr/: context.md
.limbo/context/dapz/: context.md
.limbo/context/fvnl/: context.md
.limbo/context/fzza/: context.md
.limbo/context/mxih/: context.md
.limbo/context/npjy/: context.md
.limbo/context/ocyf/: context.md
.limbo/context/ptbn/: context.md
.limbo/context/riuh/: context.md
.limbo/context/tbwj/: context.md
.limbo/context/tfue/: context.md
.limbo/context/tmwu/: context.md
.limbo/context/tysp/: context.md
.limbo/context/uhbu/: context.md
.limbo/context/vcbi/: context.md
.limbo/context/vnhw/: context.md
.limbo/context/wnvr/: context.md
.limbo/context/wwlw/: context.md
.limbo/context/yjls/: context.md
docs/: INDEX.md  lod-as-graph.md  simaris-server.md
docs/dev/: architecture.md  contributing.md  data-model.md
docs/user/: commands.md  getting-started.md
experiments/m12-negatives/: auto-prune-pool.json  auto-prune.py  build-labels.py  candidate-labels-2026-05-10.json  real-prompts-2026-05-10.json  scores-expanded.json  wald-ci.py
experiments/m12-negatives/runs/real-20260510T223619Z-raw/: rp01.hook-v2.r0.json  rp01.hook-v2.r1.json  rp01.hook-v2.r2.json  rp01.hook.r0.json  rp01.hook.r1.json  rp01.hook.r2.json  rp01.search-no-vec.r0.json  rp01.search.r1.json  rp02.hook-v2.r0.json  rp02.hook-v2.r1.json  rp02.hook-v2.r2.json  rp02.hook.r0.json  rp02.hook.r1.json  rp02.hook.r2.json  rp02.search-no-vec.r0.json  rp03.hook-v2.r0.json  rp03.hook-v2.r1.json  rp03.hook-v2.r2.json  rp03.hook.r0.json  rp03.hook.r1.json  rp03.hook.r2.json  rp04.hook-v2.r0.json  rp04.hook-v2.r1.json  rp04.hook-v2.r2.json  rp04.hook.r0.json  rp04.hook.r1.json  rp04.hook.r2.json  rp05.hook-v2.r0.json  rp05.hook-v2.r1.json  rp05.hook-v2.r2.json  rp05.hook.r0.json  rp05.hook.r1.json  rp05.hook.r2.json  rp05.search-no-vec.r2.json  rp06.hook-v2.r0.json  rp06.hook-v2.r1.json  rp06.hook-v2.r2.json  rp06.hook.r0.json  rp06.hook.r1.json  rp06.hook.r2.json  (+373 more)
experiments/m12-negatives/runs/real-20260510T223742Z-raw/: rp01.hook-v2.r0.json  rp01.hook-v2.r1.json  rp01.hook-v2.r2.json  rp01.hook.r0.json  rp01.hook.r1.json  rp01.hook.r2.json  rp02.hook-v2.r0.json  rp02.hook-v2.r1.json  rp02.hook-v2.r2.json  rp02.hook.r0.json  rp02.hook.r1.json  rp02.hook.r2.json  rp02.search.r0.json  rp03.hook-v2.r0.json  rp03.hook-v2.r1.json  rp03.hook-v2.r2.json  rp03.hook.r0.json  (+405 more)
experiments/m13-abstain/: REPORT.md  analysis.json  analyze.py  extract_features.py  features.json  inspect_rule.py  r5_impact.json  r5_impact.py  scores-hook-v3.json
experiments/m13-abstain/runs/: real-20260510T230110Z.jsonl  real-20260510T231115Z.jsonl
experiments/prime-research/: matrix.sh  real-validate.sh  seed.sh  tasks.txt  variance.sh
scripts/hooks/: simaris-procedures.sh
simaris-server/: Cargo.toml
simaris-server/src/: cli.rs  main.rs  middleware.rs
simaris-server/src/routes/: consolidation.rs  healthz.rs  mod.rs  scan.rs  search.rs  stats.rs  units.rs
simaris-vec/: Cargo.toml
simaris-vec/src/: ask.rs  backfill.rs  embed.rs  lib.rs  main.rs  migrate.rs  verify.rs
src/: ask.rs  cluster.rs  context.rs  db.rs  digest.rs  display.rs  dream.rs  emit.rs  frontmatter.rs  hybrid.rs  lint.rs  main.rs  rewrite.rs  similar.rs  size_guard.rs  tag_guard.rs
tests/: integration.rs
tools/: README.md  direct_backfill_ollama.py
web/: app.js  browse.html  browse.js  consolidation.html  consolidation.js  dashboard.js  index.html  styles.css  triage.html  triage.js  units.html  units.js  wiki.html  wiki.js
(+827 files in other folders)
