[workspace]
members = ["simaris-server"]
resolver = "3"

[package]
name = "simaris"
version = "0.5.1"
edition = "2024"
description = "Knowledge management CLI with SQLite, FTS5, and graph-based linking"
license = "MIT"
repository = "https://github.com/simonspoon/simaris"
authors = ["Simon Spoon"]
keywords = ["knowledge-management", "cli", "sqlite", "search", "graph"]
categories = ["command-line-utilities", "database"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
