[package]
name = "simaris-server"
version = "0.1.0"
edition = "2024"
description = "HTTP admin dashboard for the simaris knowledge store"
license = "MIT"
publish = false

[dependencies]
anyhow = "1"
axum = "0.7"
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
