[package]
name = "simaris-vec"
version = "0.0.1"
edition = "2024"
description = "simaris vec subsystem — lance + tantivy + bge-m3 hybrid retrieval (M5.1)"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "simaris-vec-dev"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }

# vec stack — lance + arrow + tantivy.
# arrow pinned to 56 (lance 0.39 dep cap; per memory-architect-sitrep-2026-05-03-m3-2).
arrow = "56"
arrow-array = "56"
arrow-schema = "56"
lance = "0.39"
lance-index = "0.39"
tantivy = "0.24"
futures = "0.3"
tokio = { version = "1", features = ["full"] }

# bge-m3 ollama HTTP backend — sync minimal client.
ureq = { version = "2", default-features = false, features = ["json", "tls"] }

[dev-dependencies]
tempfile = "3"
